fix: scrollbar layout shift

--- a/search/src/index.css
+++ b/search/src/index.css
@@ -23,3 +23,7 @@ mark > p {
   font-weight: bolder;
   width: fit-content;
 }
+
+html {
+  scrollbar-gutter: stable;
+}
